# auto-drone-mapping

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
scenarios/small_indoor/: config.yaml
src/swarm_mapping/: __init__.py  cli.py
src/swarm_mapping/config/: __init__.py  loader.py
src/swarm_mapping/coordination/: __init__.py
src/swarm_mapping/mapping/: __init__.py  export.py  grid.py  mapper.py  raytrace.py  types.py
src/swarm_mapping/perception/: __init__.py  protocols.py  rangefinder.py  types.py
src/swarm_mapping/planning/: __init__.py
src/swarm_mapping/simulation/: __init__.py  engine.py  localizer.py  protocols.py  raycaster.py  types.py
src/swarm_mapping/simulation/assets/: drone.xml  small_indoor.xml
src/swarm_mapping/visualization/: __init__.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_smoke.py
tests/unit/test_mapping/: test_export.py  test_grid.py  test_mapper.py  test_raytrace.py
tests/unit/test_perception/: test_rangefinder.py
tests/unit/test_simulation/: conftest.py  test_engine.py  test_localizer.py  test_raycaster.py
